src/objects/OV_ContentProxy__c.object
<CustomObject>
    <fields>
        <fullName>ContentDocumentId__c</fullName>
        <label>Content Document Id</label>
        <length>18</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LatestContentVersionId__c</fullName>
        <label>Latest Content Version Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Title__c</fullName>
        <label>Full Title</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Url__c</fullName>
        <label>Url</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <label>One View Content Proxy</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>OV Proxy Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>One View Content Proxy</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>